src/applications/claims-status/sass/claims-status.scss
@import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/mixins";
// TODO: Look at moving the .process-step css into this file
@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-process-list";
// TODO: Determine if we are actually using any of these
@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/va-pagination";
@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-modal";

.breadcrumbs-container {
  height: 4rem;
}

.on-this-page-container {
  height: 350px;
}

.additional-info-container {
  height: 2.625rem;
}

.web-component-loading {
  border: 1px solid var(--vads-color-gray-medium);
  border-radius: 6px;
  contain: layout style;
  content-visibility: auto;
}

.claim-list {
  margin-bottom: 2em;
}

#claims-combined {
  margin: 1em 0;
}

.claim-file-border,
.help-heading {
  border-bottom: 3px solid var(--vads-color-primary);
  margin: 10px 0 10px;
  padding-bottom: 9px;
  font-size: 1.35em;
  line-height: 1.2;
  font-weight: bold;
  max-width: 14.0625rem;
}

.appeal-help-heading {
  border-bottom: 3px solid var(--vads-color-primary);
  margin: 10px 0 10px;
  padding-bottom: 9px;
  font-size: 1.35em;
  line-height: 1.2;
  font-weight: bold;
}

.claims-status-content {
  .help-sidebar {
    // Line up the bottom border under "Need help?" with the tab list bottom border
    margin-top: calc(1.875rem - 10px);
    margin-bottom: 50px;

    & > div {
      margin-bottom: 1.875rem;
    }
  }

  // The claims container has a sizeable padding; don't make the whitespace bigger
  .claims-container .help-sidebar {
    margin-bottom: 0px;
  }
}

.help-sidebar {
  p {
    margin: 0 0 4px;
  }
}

@media (max-width: $medium-screen) {
  .claims-status-content .help-sidebar {
    margin-top: 0px;
  }
}

.submit-additional-evidence {
  margin-top: 1.5em;
}

.additional-evidence-desc {
  margin: 0;
}

.reviewed-file {
  color: var(--vads-color-success-dark);
}

.tracked-item-due {
  > .due-file {
    color: var(--vads-color-base-darker);
    font-size: 0.9em;
  }

  > .past-due {
    color: var(--vads-color-secondary-darkest);
    font-size: 0.9em;
  }
}

.due-date-header {
  > .due-file {
    color: var(--vads-color-base);
  }

  > .past-due {
    color: var(--vads-color-secondary-darkest);
  }
}

.claim-list-item-container {
  background-color: var(--vads-color-base-lightest);
  padding: 2em 1em 1em;
  margin-bottom: 1em;
  position: relative;
}

.claim-list-item-icon {
  margin-right: 5px;
}

.claim-list-item-text {
  margin: 0;
}

.communications,
.communications-old {
  list-style: none;
  padding: 0;
}

.communications-old,
.status-old {
  margin: 0 0 0.5em;
}

.communications,
.status {
  margin: 0;
}

// Index page V3
.claim-list-item {
  margin-bottom: 1em;

  // TODO: We may or may not use this
  &.in-progress {
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.32);
  }

  .card-status {
    margin: 0 0 1em;
    // display: flex;

    p {
      margin-top: 0.25em;
      margin-bottom: 0;
    }
  }
}

.claim-list-item-header {
  margin-top: 0;

  span {
    display: block;
    width: fit-content;
    font-size: 1rem;
    font-family: $font-family-sans;
    font-weight: normal;
    line-height: 1.5;
  }

  .usa-label {
    margin-bottom: 1em;
  }
}

.last-changed-label {
  position: absolute;
  top: 0;
  right: 1em;
  background: var(--vads-color-link);
  color: var(--vads-color-white);
  font-size: 0.8em;
  padding: 0.5em 0.75em;
  border-radius: 0 0 0.5em 0.5em;
}

.claims-status {
  padding: 1em 0 3em;
}

.claims-container {
  &:not(:first-child) {
    padding: 1em 0 3em;
  }

  &:first-child {
    padding-bottom: 3em;
  }

  .claims-container-title {
    margin-bottom: 0;
    & + p {
      margin-top: 0;
    }
  }
}

.claims-status-icon {
  font-size: 24px;
}

.next-action-container {
  padding-right: 1em;
}

.next-action {
  padding: 1em;
  position: relative;

  &.hearing {
    background: var(--vads-color-inset-bg);
  }

  &.soc,
  &.ssoc {
    background: var(--vads-color-gold-lightest);
    padding-left: 2.5em;
  }
}

.last-status {
  margin-top: 1em;
  padding: 0 1em 1em 0;
}

.content {
  position: relative;
  padding-left: 2.03125rem;
}

.last-status-content-icon {
  color: var(--vads-color-success-dark);
  left: 0;
  position: absolute;
  top: 0.1em;
}

.previous-activity {
  margin-top: 1em;
}

.events-list {
  margin: 0;
  padding: 0;
}

.event-item {
  list-style: none;
  border-bottom: solid thin var(--vads-color-base-light);

  &:last-child {
    border: none;
  }
}

.help-phone-number {
  margin: 0.5em 0;
}

.clearfix:after {
  content: " ";
  visibility: hidden;
  display: block;
  height: 0;
  clear: both;
}

.first-of-type {
  color: var(--vads-color-primary-dark);
  letter-spacing: normal;
  font-size: 1.25em;
}

.file-requirements {
  margin-bottom: 1.5em;
}

.file-requirement-header {
  font-weight: bold;
  margin-bottom: 0;
}

.file-requirement-text {
  margin: 0;
  &:last-child {
    margin-bottom: 1em;
  }
}

.document-item-container {
  background-color: var(--vads-color-base-lightest);
  padding: 1em;
  margin-bottom: 1.5em;
  &:focus {
    outline: none;
  }
}

.document-title-text-container {
  padding-right: 1em;
  word-break: break-all;
}

.remove-document-button {
  margin: 0;
  font-weight: bold;
}

.document-title-row {
  display: flex;
  justify-content: space-between;
}

.document-title {
  font-size: 1.35em;
  line-height: 1.5;
  font-weight: bold;
  padding: 0;
}

.disability-claims-warning {
  background-color: var(--vads-color-warning-lighter);
  text-align: left;
  font-weight: bold;
}

.claims-unavailable {
  margin-top: 0.6em;
  margin-bottom: 1.5em;
}

.claims-upload-input-error-message {
  margin-bottom: 1em;
}

.claims-upload-input-title {
  font-size: 1.15em;
  line-height: 1.5;
  font-weight: bold;
  padding-bottom: 0 !important;
}
/* ... */

